# practical-work

./: .gitignore  .gitmodules  README.md  THESIS_HANDOFF_PLAN.md  backsync.sh  evaluate_all.sh  pyproject.toml  sync.sh  test_results.md  train.sh  train_siren.json  train_wire.json
comparison/: feax_benchmark.py  jax_fem_benchmark.py  view.py
demo/corner_scale1/: model_0.eqx  model_0_config.json  model_1.eqx  model_1_config.json  model_2.eqx  model_2_config.json  model_3.eqx  model_4.eqx  model_5.eqx  model_6.eqx  model_7.eqx  model_7_config.json  model_8.eqx  opt_state_0.eqx  opt_state_1.eqx  opt_state_2.eqx  opt_state_3.eqx  opt_state_4.eqx  (+4 more)
feax/: TOuNN.py  run_siren_inference.py  siren.py  topology_optimization.py  trained_siren.eqx
jax_fem/: TOuNN.py  run_siren_inference.py  trained_siren.eqx  trained_siren_fixed.eqx
notebooks/: graph_1.ipynb  graph_2.ipynb  pandas.ipynb  train_siren.json
scripts/: sync_studentwork.sh
topopt/: baseline.py  bc.py  cli.py  config.py  eval.py  evaluate_vtu.py  evaluation.py  fem_utils.py  jax_setup.py  main.py  monitoring.py  problems.py  render_vtu.py  serialization.py  siren.py  solver_config.py  test.ipynb  train.py  upscale_vtu.py  utils.py  view.py  visualize.py  wire.py
train_configs/: train_simple-Tounn.yaml  train_simple.yaml  train_simple_right_variants.yaml  train_simple_right_variants_cosine.yaml  train_siren.yaml  train_siren_base.yaml  train_siren_base_multiple_omega_10-14.yaml  train_siren_base_multiple_omega_15-20.yaml  train_siren_base_scale_2.yaml  train_siren_base_scale_3.yaml  train_siren_different_layer_3_channel_128.yaml  train_siren_different_layer_3_channel_32.yaml  train_siren_different_layer_3_channel_512.yaml  train_siren_different_layer_3_channel_512_scale_1.yaml  train_siren_different_layer_3_channel_512_scale_2.yaml  train_siren_different_layer_3_channel_512_scale_3.yaml  train_siren_different_layer_3_channel_512_scale_4.yaml  train_siren_different_layer_3_channel_512_scale_5.yaml  train_siren_different_layer_3_channel_64.yaml  train_siren_different_layer_4_channel_128.yaml  train_siren_different_layer_4_channel_32.yaml  train_siren_different_layer_4_channel_64.yaml  train_siren_different_layer_5_channel_128.yaml  train_siren_different_layer_5_channel_32.yaml  train_siren_different_layer_5_channel_64.yaml  train_siren_heimholz.yaml  train_siren_omega_17_scale_1.yaml  train_siren_omega_18_scale_1.yaml  train_siren_omega_20_scale_2.yaml  train_siren_omega_22_scale_2.yaml  train_siren_omega_22_scale_3.yaml
(+560 files in other folders)
