[project]
name = "topology-optimization"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "feax",
    "equinox>=0.13.1,<0.14.0",
    "optax>=0.2.6,<0.3",
    "tqdm>=4.67.1,<5",
    "matplotlib>=3.10.6,<4",
    "jax[cuda13] ; sys_platform == 'linux'"
]

[tool.uv.sources]
feax = { path = "./feax", editable = true }
jax = { path = "./jax", editable = true }

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ruff>=0.14.3",
]
jax-fem = [
    "jax-fem>=0.0.11",
    "pyfiglet>=1.0.4",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py313"
include = ["pyproject.toml", "topopt/*.py"]
extend-exclude = ["topopt/deprecated/*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

