[project]
name = "topopt"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "feax",
    "jax",
    "equinox>=0.13.1,<0.14.0",
    "optax>=0.2.6,<0.3",
    "tqdm>=4.67.1,<5",
    "matplotlib>=3.10.6,<4",
    "scikit-learn>=1.8.0",
    "jinja2>=3.1.6",
    "nlopt>=2.10.0",
    "pyyaml>=6.0.3",
    "click>=8.3.1",
    "pandas>=2.3.3",
]

[tool.uv.sources]
feax = { path = "./feax", editable = false}

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ruff>=0.14.3",
    "seaborn>=0.13.2",
]
cuda12 = [
    "scikit-build-core>=0.5 ; sys_platform == 'linux'",
    "nanobind ; sys_platform == 'linux'",
    "jax[cuda12]>=0.5.0 ; sys_platform == 'linux'",
    "nvidia-cudss-cu12 ; sys_platform == 'linux'",
    "feax[cuda12] ; sys_platform == 'linux'",
    "pip"
]

[tool.uv]
package = true

[tool.ruff]
line-length = 88
target-version = "py313"
include = ["pyproject.toml", "topopt/*.py"]
extend-exclude = ["topopt/deprecated/*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["topopt"]

[project.scripts]
topopt = "topopt.cli:main"
